--- a/Factions/Neon Citizens.yaml
+++ b/Factions/Neon Citizens.yaml
@@ -11,6 +11,10 @@ Clothes:
   Modname: Starfield.esm
 - Formkey: 684082
   Modname: Starfield.esm
+- Formkey: 684084
+  Modname: Starfield.esm
+- Formkey: 684087
+  Modname: Starfield.esm
 Spacesuits: 
 SpaceHelmets: 
 Boostpacks: 
