--- a/Factions/Neon Citizens.yaml
+++ b/Factions/Neon Citizens.yaml
@@ -2,19 +2,26 @@ Name: Neon Citizens
 Hats:
 - Formkey: 737735
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Hairs_Hats_Neon [LVLI:000B41C7]
 Clothes: 
 - Formkey: 1004639
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Clothes_Neon_Male [LVLI:000F545F]
 - Formkey: 684083
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Clothes_Neon_Female_Thin [LVLI:000A7033]
 - Formkey: 1004638
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Clothes_Neon_Female [LVLI:000F545E]
 - Formkey: 684082
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Clothes_Neon_Female_Overweight [LVLI:000A7032]
 - Formkey: 684084
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Clothes_Neon_Male_Overweight [LVLI:000A7034]
 - Formkey: 684087
   Modname: Starfield.esm
+  EditorId: LL_Crowd_Clothes_Neon_Male_Thin [LVLI:000A7037]
 Spacesuits: 
 SpaceHelmets: 
 Boostpacks: 
