--- a/Factions/Business.yaml
+++ b/Factions/Business.yaml
@@ -56,3 +56,15 @@ OutfitClothes:
 - Formkey: 1031298
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_ShirtAndSlacks_Vest_UC03_Lou [OTFT:000FBC82]
+- Formkey: 7336
+  Modname: Starfield.esm
+  EditorId: MQ105_Outfit_SlaytonEmployee [OTFT:00001CA8]
+- Formkey: 382971
+  Modname: Starfield.esm
+  EditorId: Outfit_NH_Tourist [OTFT:0005D7FB]
+- Formkey: 696485
+  Modname: Starfield.esm
+  EditorId: Outfit_Citizen_Formal [OTFT:000AA0A5]
+
+
+  
