--- a/Factions/Neon Citizens.yaml
+++ b/Factions/Neon Citizens.yaml
@@ -50,3 +50,15 @@ OutfitClothes:
 - Formkey: 2440088
   Modname: Starfield.esm
   EditorId: Outfit_Clothes_Fishworker_Poncho [OTFT:00253B98]
+- Formkey: 189781
+  Modname: Starfield.esm
+  EditorId: Outfit_Frank_Renick [OTFT:0002E555]
+- Formkey: 651502
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_CapeSuit_green [OTFT:0009F0EE]
+- Formkey: 651509
+  Modname: Starfield.esm
+  EditorId: Outfit_Clothes_City_CapeSuit_brown [OTFT:0009F0F5]
+
+
+  
